# Garag

./: .env  README.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 197231663efb_init.py  89fee21b2f2e_create_user.py  914b5d25eb4e_.py
apps/api/app/: main.py
apps/api/app/api/v1/routes/: admin.py  auth.py  cars.py  dev.py  me.py  media.py  public.py
apps/api/app/core/: config.py  deps.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: car.py  user.py
apps/api/app/schemas/: auth.py  car.py  media.py
apps/api/app/services/: opensearch.py  s3.py
apps/api/app/tasks/: indexer.py  seed.py  worker.py
apps/api/app/ui/: index.html
apps/api/garag_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
infra/: compose.yaml
